--- a/translations/de/my-custom-translations.yml
+++ b/translations/de/my-custom-translations.yml
@@ -9,7 +9,7 @@ die Unterstützung wirtschaftlicher Innovationen oder die Bewusstseinsschaffung 
 <br>
 "Um diese Bestrebungen zu untermauern, ist die Stadt Ingolstadt mit der Unterzeichnung der Musterresolution „2030-Agenda für Nachhaltige Entwicklung:
 Nachhaltigkeit auf kommunaler Ebene gestalten“ am 23.07.2020 eine Selbstverpflichtung eingegangen:" Die globalen Nachhaltigkeitsziele sollen auf 
-kommunaler Ebene angegangen werden. Basierend auf dem Leitbild der 17 globalen Ziele für nachhaltige Entwicklung (Sustainable Development Goals; SDGs) 
+kommunaler Ebene angegangen werden. Basierend auf dem Leitbild der 17 globalen Ziele für nachhaltige Entwicklung ("Sustainable Development Goals; SDGs") 
 hat die Stadt Ingolstadt in einem Gemeinschaftsprojekt eine Nachhaltigkeitsstrategie entwickelt. Bürgerinnen und Bürgern, alle gesellschaftlichen Gruppierungen, 
 Behörden, Wissenschaft, Wirtschaft, Sozial- und Umweltverbände haben an dieser Zukunftsvision mitgewirkt. Am 28. Februar 2023 wurde schließlich die Strategie 
 zeitgleich mit dem 1. Nachhaltigkeitsbericht der Stadt Ingolstadt verabschiedet. Die Ergebnisse spiegeln sich im umfassenden Beteiligungsprozess wieder. 
