--- a/translations/de/my-custom-translations.yml
+++ b/translations/de/my-custom-translations.yml
@@ -12,14 +12,10 @@ frontpage-intro-description: |
   erneuerbaren Energien sowie die stetige Stadtbegrünung ebenso wie die Förderung schulischer und außerschulischer Bildung, 
   die Unterstützung wirtschaftlicher Innovationen oder die Bewusstseinsschaffung für Ressourcenschonung. <br>
   <br>
-  Um diese Bestrebungen zu untermauern, ist die Stadt Ingolstadt mit der Unterzeichnung der Musterresolution „2030-Agenda für Nachhaltige Entwicklung - 
-  Nachhaltigkeit auf kommunaler Ebene gestalten“ am 23.07.2020 eine Selbstverpflichtung eingegangen. Die globalen Nachhaltigkeitsziele sollen auf 
-  kommunaler Ebene angegangen werden. Basierend auf dem Leitbild der 17 globalen Ziele für nachhaltige Entwicklung (Sustainable Development Goals, SDGs) 
-  hat die Stadt Ingolstadt in einem Gemeinschaftsprojekt eine Nachhaltigkeitsstrategie entwickelt. Bürgerinnen und Bürgern, alle gesellschaftlichen Gruppierungen, 
-  Behörden, Wissenschaft, Wirtschaft, Sozial- und Umweltverbände haben an dieser Zukunftsvision mitgewirkt. Am 28. Februar 2023 wurde schließlich die Strategie 
-  zeitgleich mit dem 1. Nachhaltigkeitsbericht der Stadt Ingolstadt verabschiedet. Die Ergebnisse spiegeln sich im umfassenden Beteiligungsprozess wieder. 
-  Gemeinsam wurden fünf Handlungsfelder und insgesamt 15 dazu passende Schwerpunktthemen für Ingolstadts Zukunft identifiziert und sind hinterlegt mit 
-  Ingolstadt-spezifischen Zielen und Indikatoren. <br>
+  Basierend auf dem Leitbild der 17 globalen Ziele für nachhaltige Entwicklung (Sustainable Development Goals, SDGs) 
+  hat die Stadt Ingolstadt in einem Gemeinschaftsprojekt mit der Stadtgesellschaft eine Nachhaltigkeitsstrategie entwickelt.
+  In diesem Prozess wurden fünf Handlungsfelder und insgesamt 15 dazu passende Schwerpunktthemen für Ingolstadts Zukunft identifiziert und mit 
+  Ingolstadt-spezifischen Zielen und Indikatoren hinterlegt. <br>
   <br>
   Mit den sogenannten Indikatoren wird die Erreichung der formulierten Ziele mit konkreten Zahlen gemessen. Das digitale Monitoring, welches Sie hier finden gibt 
   Auskunft darüber, in welchen Handlungsfeldern bereits viel für die Zielerreichung beigetragen wird und in welchen Handlungsfeldern noch Optimierungsbedarf besteht. 
