--- a/meta/3-3.md
+++ b/meta/3-3.md
@@ -7,7 +7,7 @@ indicator_sort_order: 03-03-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Ärzteversorgung (Allg.-Mediziner/-innen je 100.000 E) 
 data_start_values:  # initialize the field to be shown  
@@ -20,15 +20,15 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
+SOURCE_TYPE: <a href="https://www.kvb.de/index.php">Kassenärztliche Vereinigung Bayerns</a>  # data source  
+source_earliest_available_1: 2021
 source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Ärzteversorgung (Allg.-Mediziner/-innen je 100.000 E) <br>
+Anzahl der Hausärztinnen und Hausärzte, die an der kassenärztlichen Versorgung teilnehmen (ambulant) je 100.000 Einwohnerinnen und Einwohner <br>
