--- a/meta/10-5.md
+++ b/meta/10-5.md
@@ -20,15 +20,15 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Gesundheitsamt Ingolstadt  # data source  
+source_earliest_available_1: 2018
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Zurzeit sind keine Daten hierzu vorhanden
+Prozentualer Anteil der Kinder mit sprachlichen Auffälligkeiten bei der Schuleingangsuntersuchung (Kinder mit und ohne Migrationshintergrund).
