--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -33,12 +33,12 @@ reporting_status: complete
 ---
 Prävention ist im Gesundheitswesen ein Oberbegriff für zielgerichtete Maßnahmen und Aktivitäten, um Krankheiten oder gesundheitliche Schädigungen zu vermeiden, das Risiko der Erkrankung zu verringern oder ihr Auftreten zu verzögern. Präventive Maßnahmen lassen sich nach dem Zeitpunkt, zu dem sie eingesetzt werden, der primären, der sekundären oder der tertiären Prävention zuordnen. Des Weiteren lassen sich präventive Maßnahmen im Hinblick darauf unterscheiden, ob sie am individuellen Verhalten (Verhaltensprävention) oder an den Lebensverhältnissen ansetzen (Verhältnisprävention). <br>
 <br>
-Universelle Prävention: Hierzu zählen Maßnahmen, die sich an die allgemeine Bevölkerung richten, wie etwa suchtpräventive Vorträge, Schulprogramme zur Förderung der Lebenskompetenzen, Maßnahmen am Arbeitsplatz, Informationsmaterialien oder Kampagnen. <br>
+<b>Universelle Prävention:</b> Hierzu zählen Maßnahmen, die sich an die allgemeine Bevölkerung richten, wie etwa suchtpräventive Vorträge, Schulprogramme zur Förderung der Lebenskompetenzen, Maßnahmen am Arbeitsplatz, Informationsmaterialien oder Kampagnen. <br>
 <br>
-Selektive Prävention: richtet sich an Menschen, die statistisch gesehen ein überdurchschnittlich hohes Risiko für Substanzmissbrauch oder Abhängigkeit aufweisen. Zu dieser Gruppe zählen beispielsweise Kinder alkohol- oder drogenabhängiger Eltern. <br>
+<b>Selektive Prävention:</b> richtet sich an Menschen, die statistisch gesehen ein überdurchschnittlich hohes Risiko für Substanzmissbrauch oder Abhängigkeit aufweisen. Zu dieser Gruppe zählen beispielsweise Kinder alkohol- oder drogenabhängiger Eltern. <br>
 <br>
-Indizierte Prävention: Unter dieser Bezeichnung lassen sich jene Aktivitäten zusammenfassen, die sich an Personen richten, die bereits ein manifestes Risikoverhalten etabliert haben. Somit sind besonders diese Zielgruppen einem erhöhten Suchtrisiko ausgesetzt. Eine Zielgruppe für indizierte Prävention sind zum Beispiel junge Erwachsene, die am Wochenende wiederholt exzessiv Alkohol trinken. <br>
+<b>Indizierte Prävention:</b> Unter dieser Bezeichnung lassen sich jene Aktivitäten zusammenfassen, die sich an Personen richten, die bereits ein manifestes Risikoverhalten etabliert haben. Somit sind besonders diese Zielgruppen einem erhöhten Suchtrisiko ausgesetzt. Eine Zielgruppe für indizierte Prävention sind zum Beispiel junge Erwachsene, die am Wochenende wiederholt exzessiv Alkohol trinken. <br>
 <br>
-Verhältnisprävention (bzw. strukturelle Prävention): Darunter versteht man so genannte "umgebungsorientierte" Maßnahmen. Dazu zählt das Einwirken auf jene Entstehungsbedingungen, die über eine Einzelperson hinausgehen: Lebens- und Arbeitsbedingungen, Gesetze, Gesundheits- und sozialpolitische Maßnahmen. Verhältnisprävention kann auch als strukturorientierte bzw. strukturelle Prävention bezeichnet werden, da sie sich auf die Strukturen rund um die eigentlichen Zielpersonen richtet. Dazu zählen beispielsweise Maßnahmen wie Alters- und Werbebeschränkungen, die Steuerung der Verfügbarkeit und des Preises, aber auch die Gestaltung grundlegender Rahmenbedingungen wie Bildungspolitik, Maßnahmen gegen die Jugendarbeitslosigkeit oder gerechte Ressourcenverteilung. <br>
+<b>Verhältnisprävention (bzw. strukturelle Prävention):</b> Darunter versteht man so genannte "umgebungsorientierte" Maßnahmen. Dazu zählt das Einwirken auf jene Entstehungsbedingungen, die über eine Einzelperson hinausgehen: Lebens- und Arbeitsbedingungen, Gesetze, Gesundheits- und sozialpolitische Maßnahmen. Verhältnisprävention kann auch als strukturorientierte bzw. strukturelle Prävention bezeichnet werden, da sie sich auf die Strukturen rund um die eigentlichen Zielpersonen richtet. Dazu zählen beispielsweise Maßnahmen wie Alters- und Werbebeschränkungen, die Steuerung der Verfügbarkeit und des Preises, aber auch die Gestaltung grundlegender Rahmenbedingungen wie Bildungspolitik, Maßnahmen gegen die Jugendarbeitslosigkeit oder gerechte Ressourcenverteilung. <br>
 <br>
 Quelle: <a href="https://www.praevention.at/sucht-und-suchtvorbeugung/begriffs-und-problemdefinitionen/der-begriff-praevention">Institut Suchtprävention</a> und <a href="https://www.bundesgesundheitsministerium.de/service/begriffe-von-a-z/p/praevention.html">Bundesgesundheitsministerium</a>
