--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -8,7 +8,7 @@ indicator_sort_order: 03-02-01
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
-#graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
+#graph_stacked_disaggregation: Präventionsart  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl und Art Präventionsangebote 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
