--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Prävention ist im Gesundheitswesen ein Oberbegriff für zielgerichtete Maßnahmen und Aktivitäten, um Krankheiten oder gesundheitliche Schädigungen zu vermeiden, das Risiko der Erkrankung zu verringern oder ihr Auftreten zu verzögern. Präventive Maßnahmen lassen sich nach dem Zeitpunkt, zu dem sie eingesetzt werden, der primären, der sekundären oder der tertiären Prävention zuordnen. Des Weiteren lassen sich präventive Maßnahmen im Hinblick darauf unterscheiden, ob sie am individuellen Verhalten (Verhaltensprävention) oder an den Lebensverhältnissen ansetzen (Verhältnisprävention). <br>
+Prävention ist im Gesundheitswesen ein Oberbegriff für zielgerichtete Maßnahmen und Aktivitäten, um Krankheiten oder gesundheitliche Schädigungen zu vermeiden, das Risiko der Erkrankung zu verringern oder ihr Auftreten zu verzögern. Präventive Maßnahmen lassen sich nach dem Zeitpunkt, zu dem sie eingesetzt werden, der primären, der sekundären oder der tertiären Prävention zuordnen. Des Weiteren lassen sich Präventionsmaßnahmen noch wie folgt unterscheiden. <br>
 <br>
 <b>Universelle Prävention:</b> Hierzu zählen Maßnahmen, die sich an die allgemeine Bevölkerung richten, wie etwa suchtpräventive Vorträge, Schulprogramme zur Förderung der Lebenskompetenzen, Maßnahmen am Arbeitsplatz, Informationsmaterialien oder Kampagnen. <br>
 <br>
