--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -7,9 +7,9 @@ indicator_sort_order: 11-02-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
-#graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: 
+graph_type: bar  # chart types include: bar, line, binary 
+graph_stacked_disaggregation: Maßnahme Barrierefreiheit  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
+computation_units: Anzahl barrierefreier Bushaltestellen
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,14 +20,19 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1:  
+SOURCE_TYPE: INVG  # data source  
+source_earliest_available_1:  2022
 source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Grundsätzlich gilt: Wenn Straßenbaumaßnahmen bzw. -sanierungsmaßnahmen stattfinden und Haltestellen betroffen sind, werden diese automatisch barrierefrei umgebaut und der Kassler Sonderbord (ein besonderer abgeflachter Bordstein für einfacheren Aus- und Einstieg) mit taktilem Leitsystem ausgestattet.  Die Kosten übernimmt die INVG.<br>
+<br>
+Der gelbe Vorlesetaster mit der „text-to-speech“-Funktion wird zusammen mit den DFI-Anzeigern an Haltestellen der INVG installiert. Mit Abschluss der 2. Baustufe konnten bisher 130 Haltestellen im Stadtgebiet realisiert werden.<br>
+<br>
+An den zentralen Haltestellen ZOB und Nordbahnhof verweisen Linienbezeichnungen in Braille-Schrift auf die jeweilige Bussteignummer.
