--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -20,9 +20,9 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Gesundheitsamt"  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: "Agentur für Arbeit"  # data source  
+source_earliest_available_1: 2022
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
