--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -9,7 +9,7 @@ indicator_sort_order: 03-06-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Offene Stellen und Ausbildungen von medizinischem Fachpersonal 
+computation_units: Anzahl
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
