--- a/meta/3-1.md
+++ b/meta/3-1.md
@@ -11,10 +11,9 @@ graph_type: bar  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl Kurzzeit- und Langzeitpflegeplätze 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Pflegeplatzart 
+   value: Langzeitpflegeplätze 
+
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
