--- a/meta/5-1.md
+++ b/meta/5-1.md
@@ -17,7 +17,7 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
 SOURCE_TYPE: "Gleichstellungsbeauftragte Ingolstadt"  # data source  
@@ -63,7 +63,7 @@ Die Anzahl der Angebote für Vereinbarkeit von Beruf und Familie für städtisch
    <li>Beratung (individuell) zur Vereinbarkeit von Familie und Beruf (ca. 30 Einzelfälle)</li>
    <li>Seminar Chancengleichheit und Vereinbarkeit (vor)leben für FK (50 TN)</li>
    <li>Seminar Vereinbarkeit von Beruf und Pflege (15 TN)</li>
-   <li>bewilligte Homeoffice-Anträge: 1097 (nkrafttreten der DV Homeoffice/mobile Arbeit zum 01.01.2022)</li>
+   <li>bewilligte Homeoffice-Anträge: 1097 (Inkrafttreten der DV Homeoffice/mobile Arbeit zum 01.01.2022)</li>
    <li>genehmigte Sabaticals: 7 (Start Pilotprojekt: 01.07.2021 in drei Referaten</li>
   </ul>
  </li>
