--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -11,10 +11,8 @@ graph_type: bar  # chart types include: bar, line, binary
 graph_stacked_disaggregation: Präventionsart  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl und Art Präventionsangebote 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Präventionsart 
+   value: Gesamt 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
