--- a/meta/10-4.md
+++ b/meta/10-4.md
@@ -11,10 +11,10 @@ graph_type: bar  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Schulabbrecherquote - Ausländer in Prozent im Verhältnis zur Gesamtabbrecherquote 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Nationalität 
+   value: Gesamt 
+ - field: Nationalität 
+   value: Ausländer 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
