--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -11,10 +11,12 @@ graph_type: bar  # chart types include: bar, line, binary
 graph_stacked_disaggregation: Maßnahme Barrierefreiheit  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl barrierefreier Bushaltestellen
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Maßnahme Barrierefreiheit 
+   value: Kassler Sonderboard 
+ - field: Maßnahme Barrierefreiheit 
+   value: Vorlesetaster für Blinde 
+ - field: Maßnahme Barrierefreiheit 
+   value: Taktikeles Leitsystem 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
