--- a/meta/14-2.md
+++ b/meta/14-2.md
@@ -11,10 +11,10 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Gewässerqualität Badeseen 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Badesee 
+   value: Baggersee 
+ - field: Badesee 
+   value: Auwaldsee 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
