--- a/translations/de/cookies.yml
+++ b/translations/de/cookies.yml
@@ -1,11 +1,11 @@
 cookie_settings: Cookie settings
-all_required_notice: We use some essential cookies to make this service work. They always need to be on.
+all_required_notice: Wir nutzen Cookies auf unserer Website. <br>Wenn Sie unter 16 Jahre alt sind und Ihre Zustimmung zu freiwilligen Diensten geben möchten, müssen Sie Ihre Erziehungsberechtigten um Erlaubnis bitten. <br>Wir verwenden Cookies und andere Technologien auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. Personenbezogene Daten können verarbeitet werden (z. B. IP-Adressen), z. B. für personalisierte Anzeigen und Inhalte oder Anzeigen- und Inhaltsmessung. Weitere Informationen über die Verwendung Ihrer Daten finden Sie in unserer Datenschutzerklärung. Sie können Ihre Auswahl jederzeit unter Einstellungen widerrufen oder anpassen.
 all_required_ok: OK
 acceptAll: Alle akzeptieren
 acceptSelected: Speichern
 close: Close
-consentModal_description: Here you can change which cookies you're happy for us to use.
-consentModal_title: Datenschutzeinstellungen
+consentModal_description: Hier finden Sie eine Übersicht über alle verwendeten Cookies. Sie können Ihre Zustimmung zu ganzen Kategorien geben oder sich weitere Informationen anzeigen lassen und so nur bestimmte Cookies auswählen.
+consentModal_title: Individuelle Datenschutzeinstellungen
 consentNotice_changeDescription: The cookies used on this site have changed since you last visited, please renew your consent.
 consentNotice_description: Wir nutzen Cookies auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. <br>Wenn Sie unter 16 Jahre alt sind und Ihre Zustimmung zu freiwilligen Diensten geben möchten, müssen Sie Ihre Erziehungsberechtigten um Erlaubnis bitten. <br>Wir verwenden Cookies und andere Technologien auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. Personenbezogene Daten können verarbeitet werden (z. B. IP-Adressen), z. B. für personalisierte Anzeigen und Inhalte oder Anzeigen- und Inhaltsmessung. Weitere Informationen über die Verwendung Ihrer Daten finden Sie in unserer Datenschutzerklärung. Sie können Ihre Auswahl jederzeit unter Einstellungen widerrufen oder anpassen.
 consentNotice_learnMore: Cookies einstellen
@@ -21,7 +21,7 @@ privacyPolicy_text: To learn more, please read our privacy policy.
 purposeItem_service: Cookie-Informationen
 purposeItem_services: Cookie-Informationen
 purposes_functional_description: Essenzielle Cookies ermöglichen grundlegende Funktionen und sind für die einwandfreie Funktion der Website erforderlich.
-purposes_functional_title: Essential cookies
+purposes_functional_title: Essentiell
 purposes_performance_description: Statistik- und Optimierungscookies Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen.
 purposes_performance_title: Performance optimization
 purposes_analytics_description: These services collect information about how you use the website. We use this data to help make the website better.
@@ -31,8 +31,8 @@ service_disableAll_description: Use this switch to enable or disable all service
 service_disableAll_title: Enable or disable all services
 service_optOut_description: This services is loaded by default (but you can opt out)
 service_optOut_title: (opt-out)
-service_purpose: purpose
-service_purposes: purposes
+service_purpose: Zweck
+service_purposes: Zweck
 service_required_description: This service is always required
 service_required_title: (technisch notwendig)
 contrast_description: Retains active state of accessibility services
