--- a/translations/de/cookies.yml
+++ b/translations/de/cookies.yml
@@ -1,7 +1,6 @@
 cookie_settings: Cookie settings
 all_required_notice:  |
-  Wir nutzen Cookies auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. <br>
-  <br> 
+  Wir nutzen Cookies auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern.\\n
   Wenn Sie unter 16 Jahre alt sind und Ihre Zustimmung zu freiwilligen Diensten geben möchten, müssen Sie Ihre Erziehungsberechtigten um Erlaubnis bitten. <br>
   <br>
   Wir verwenden Cookies und andere Technologien auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. Personenbezogene Daten können verarbeitet werden (z. B. IP-Adressen), z. B. für personalisierte Anzeigen und Inhalte oder Anzeigen- und Inhaltsmessung. Weitere Informationen über die Verwendung Ihrer Daten finden Sie in unserer Datenschutzerklärung. Sie können Ihre Auswahl jederzeit unter Einstellungen widerrufen oder anpassen.
@@ -35,7 +34,7 @@ purposes_functional_title: Essentiell
 purposes_performance_description: Statistik- und Optimierungscookies Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen.
 purposes_performance_title: Performance optimization
 purposes_analytics_description: Statistik- und Optimierungscookies Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen.
-purposes_analytics_title: Analytics cookies
+purposes_analytics_title: Statistik- und Optimierung
 save: Save
 service_disableAll_description: Use this switch to enable or disable all services.
 service_disableAll_title: Enable or disable all services
@@ -44,7 +43,7 @@ service_optOut_title: (opt-out)
 service_purpose: Zweck
 service_purposes: Zweck
 service_required_description: This service is always required
-service_required_title: 
+service_required_title: (technisch notwendig)
 contrast_description: Retains active state of accessibility services
 contrast_title: Accessibility mode
 google_analytics_description: Collects information about page visits using Google Analytics
