--- a/translations/de/cookies.yml
+++ b/translations/de/cookies.yml
@@ -28,7 +28,7 @@ purposes_functional_title: Essentiell
 purposes_performance_description: Statistik- und Optimierungscookies Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen.
 purposes_performance_title: Performance optimization
 purposes_analytics_description: Statistik- und Optimierungscookies Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen.
-purposes_analytics_title: Statistik- und Optimierung
+purposes_analytics_title: Statistiken und Optimierung
 save: Save
 service_disableAll_description: Use this switch to enable or disable all services.
 service_disableAll_title: Enable or disable all services
