--- a/translations/de/cookies.yml
+++ b/translations/de/cookies.yml
@@ -18,7 +18,7 @@ contextualConsent_acceptOnce: 'Yes'
 contextualConsent_description: Do you want to load external content supplied by {title}?
 decline: Nur essenzielle Cookies akzeptieren
 ok: Akzeptieren
-poweredBy: Powered by Klaro
+poweredBy: Realisiert mit Klaro
 privacyPolicy_name: privacy policy
 privacyPolicy_text: To learn more, please read our privacy policy.
 purposeItem_service: Weitere Informationen
