--- a/translations/de/cookies.yml
+++ b/translations/de/cookies.yml
@@ -12,8 +12,7 @@ consentModal_description: Hier finden Sie eine Übersicht über alle verwendeten
 consentModal_title: Individuelle Datenschutzeinstellungen
 consentNotice_changeDescription: The cookies used on this site have changed since you last visited, please renew your consent.
 consentNotice_description:  |
-  Wir nutzen Cookies auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. <br>
-  <br> 
+  Wir nutzen Cookies auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern.\\n
   Wenn Sie unter 16 Jahre alt sind und Ihre Zustimmung zu freiwilligen Diensten geben möchten, müssen Sie Ihre Erziehungsberechtigten um Erlaubnis bitten. <br>
   <br>
   Wir verwenden Cookies und andere Technologien auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. Personenbezogene Daten können verarbeitet werden (z. B. IP-Adressen), z. B. für personalisierte Anzeigen und Inhalte oder Anzeigen- und Inhaltsmessung. Weitere Informationen über die Verwendung Ihrer Daten finden Sie in unserer Datenschutzerklärung. Sie können Ihre Auswahl jederzeit unter Einstellungen widerrufen oder anpassen.
@@ -30,7 +29,7 @@ privacyPolicy_text: To learn more, please read our privacy policy.
 purposeItem_service: Weitere Informationen
 purposeItem_services: Weitere Informationen
 purposes_functional_description: Essenzielle Cookies ermöglichen grundlegende Funktionen und sind für die einwandfreie Funktion der Website erforderlich.
-purposes_functional_title: Essentiell
+purposes_functional_title: Funktional
 purposes_performance_description: Statistik- und Optimierungscookies Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen.
 purposes_performance_title: Performance optimization
 purposes_analytics_description: Statistik- und Optimierungscookies Cookies erfassen Informationen anonym. Diese Informationen helfen uns zu verstehen, wie unsere Besucher unsere Website nutzen.
@@ -44,8 +43,8 @@ service_purpose: Zweck
 service_purposes: Zweck
 service_required_description: This service is always required
 service_required_title: (technisch notwendig)
-contrast_description: Retains active state of accessibility services
-contrast_title: Accessibility mode
+contrast_description: Speichert die Benutzereinstellungen für den Hochkontrastmodus
+contrast_title: Hochkontrastmodus
 google_analytics_description: Collects information about page visits using Google Analytics
 google_analytics_title: Google Analytics
 cookie_settings_description: Saves your cookie consent settings
