--- a/translations/de/cookies.yml
+++ b/translations/de/cookies.yml
@@ -1,5 +1,5 @@
 cookie_settings: Cookie settings
-all_required_notice:  |
+all_required_notice: |
   Wir nutzen Cookies auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. 
   Wenn Sie unter 16 Jahre alt sind und Ihre Zustimmung zu freiwilligen Diensten geben möchten, müssen Sie Ihre Erziehungsberechtigten um Erlaubnis bitten. 
   Wir verwenden Cookies und andere Technologien auf unserer Website. Einige von ihnen sind essenziell, während andere uns helfen, diese Website und Ihre Erfahrung zu verbessern. Personenbezogene Daten können verarbeitet werden (z. B. IP-Adressen), z. B. für personalisierte Anzeigen und Inhalte oder Anzeigen- und Inhaltsmessung. Weitere Informationen über die Verwendung Ihrer Daten finden Sie in unserer Datenschutzerklärung. Sie können Ihre Auswahl jederzeit unter Einstellungen widerrufen oder anpassen.
@@ -42,7 +42,7 @@ service_purposes: Zweck
 service_required_description: This service is always required
 service_required_title: (technisch notwendig)
 contrast_description: Speichert die Benutzereinstellungen für den Hochkontrastmodus
-contrast_title: Hochkontrastmodus
+contrast_title: Contrast Cookie
 google_analytics_description: Collects information about page visits using Google Analytics
 google_analytics_title: Google Analytics
 cookie_settings_description: Saves your cookie consent settings
