--- a/meta/2-1.md
+++ b/meta/2-1.md
@@ -20,9 +20,9 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Foodsharing Ingolstadt, Ingolstädter Tafel e. V.   # data source  
+source_earliest_available_1: 2022
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Der Indikator beschreibt die Menge der geretteten Lebenmittel durch Foodsharing und die Tafel in Tonnen pro Jahr.
