--- a/meta/2-1.md
+++ b/meta/2-1.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: Foodsharing Ingolstadt, Ingolstädter Tafel e. V.   # data source  
+SOURCE_TYPE: Foodsharing Ingolstadt, Ingolstädter Tafel e. V.. INKB   # data source  
 source_earliest_available_1: 2022
 source_periodicity_1: Jährlich
 
@@ -31,4 +31,4 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-
+Der Wert setzt sich zusammen aus der Menge an Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist und der Menge an geretteten Lebensmittel. Die Menge der geretteten Lebensmittel werden von Foodsharing und der Tafel übermittelt. 
