--- a/meta/2-1.md
+++ b/meta/2-1.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: Foodsharing Ingolstadt, Ingolstädter Tafel e. V.. INKB   # data source  
+SOURCE_TYPE: Foodsharing Ingolstadt, Ingolstädter Tafel e. V., INKB   # data source  
 source_earliest_available_1: 2022
 source_periodicity_1: Jährlich
 
