--- a/meta/2-1.md
+++ b/meta/2-1.md
@@ -31,4 +31,4 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Wert setzt sich zusammen aus der Menge an Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist und der Menge an geretteten Lebensmittel. Die Menge der geretteten Lebensmittel werden von Foodsharing und der Tafel übermittelt. 
+Der Wert setzt sich zusammen aus der Menge an Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist und der Menge an geretteten Lebensmitteln. Die Menge der geretteten Lebensmittel wird von Foodsharing und der Tafel übermittelt. 
