--- a/meta/1-3.md
+++ b/meta/1-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 01-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Empfänger/innen von Grundsicherung nach SGB II insgesamt
+computation_units: Empfänger/-innen von Grundsicherung nach SGB II insgesamt
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl aller Empfänger/innen von Grundsicherung nach SGB II. <br>
+Anzahl aller Empfänger/-innen von Grundsicherung nach SGB II. <br>
