--- a/meta/3-1.md
+++ b/meta/3-1.md
@@ -30,6 +30,6 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl Kurzzeit- und Langzeitpflegeplätze. Kurzzeitpflege ist dabei auf einen Zeitraum von bis zu acht Wochen im Jahr begrenzt, im Gegensatz dazu meint man mit Langzeitpflege eine dauerhafte Pflege ohne zeitliche Begrenzung. <br>
+Kurzzeitpflege ist dabei auf einen Zeitraum von bis zu acht Wochen im Jahr begrenzt. Im Gegensatz dazu ist mit Langzeitpflege eine dauerhafte Pflege ohne zeitliche Begrenzung gemeint. <br>
 <br>
 Die Zahl der Langzeitpflegeplätze setzt sich aus den vollstationären und den Hospizplätzen zusammen. Kurzzeitpflegeplätze werden vom Ingolstädter Gesundheitsamt derzeit nicht erhoben.
