--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -33,7 +33,7 @@ Prävention ist im Gesundheitswesen ein Oberbegriff für zielgerichtete Maßnahm
 <br>
 <b>Universelle Prävention:</b> Hierzu zählen Maßnahmen, die sich an die allgemeine Bevölkerung richten, wie etwa suchtpräventive Vorträge, Schulprogramme zur Förderung der Lebenskompetenzen, Maßnahmen am Arbeitsplatz, Informationsmaterialien oder Kampagnen. <br>
 <br>
-<b>Selektive Prävention:</b> richtet sich an Menschen, die statistisch gesehen ein überdurchschnittlich hohes Risiko für Substanzmissbrauch oder Abhängigkeit aufweisen. Zu dieser Gruppe zählen beispielsweise Kinder alkohol- oder drogenabhängiger Eltern. <br>
+<b>Selektive Prävention:</b> Diese richtet sich an Menschen, die statistisch gesehen ein überdurchschnittlich hohes Risiko für Substanzmissbrauch oder Abhängigkeit aufweisen. Zu dieser Gruppe zählen beispielsweise Kinder alkohol- oder drogenabhängiger Eltern. <br>
 <br>
 <b>Indizierte Prävention:</b> Unter dieser Bezeichnung lassen sich jene Aktivitäten zusammenfassen, die sich an Personen richten, die bereits ein manifestes Risikoverhalten etabliert haben. Somit sind besonders diese Zielgruppen einem erhöhten Suchtrisiko ausgesetzt. Eine Zielgruppe für indizierte Prävention sind zum Beispiel junge Erwachsene, die am Wochenende wiederholt exzessiv Alkohol trinken. <br>
 <br>
