--- a/meta/3-3.md
+++ b/meta/3-3.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Hausärztinnen und Hausärzte, die an der kassenärztlichen Versorgung teilnehmen (ambulant) je 100.000 Einwohnerinnen und Einwohner <br>
+Anzahl der Hausärztinnen und Hausärzte, die an der kassenärztlichen Versorgung teilnehmen (ambulant) je 100.000 Einwohner/-innen. <br>
