--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -26,9 +26,24 @@ source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der offenen Stellen und Ausbildungen von medizinischem Fachpersonal. <br>
+Gemeldete Arbeitsstellen nach Berufsgruppen und Anforderungsniveau:
+- Arzt- und Praxishilfe
+- Medizinisches Laboratorium
+- Gesundh. Krankenpf. Rettungsd. Geburtsh.
+- Human- und Zahnmedizin
+- Tiermedizin und Tierheilkunde
+- Psychologie, nichtärztl. Psychotherapie
+- Nicht ärtzliche Therapie und Heilkunde
+- Pharmazie
++
+- Unbesetzte betriebliche Berufsausbildungsstellen
+- Arzt- und Praxishilfe
+- Gesundh., Krankenpfl, Rettungsd., Geburtsh.
+- Psychologie, nichtärztliche Psychotherapie
+
+Daten für 2023: Stand 03.2023  <br>
