--- a/meta/8-6.md
+++ b/meta/8-6.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der sozialversicherungspflichtig Beschäftigen im Alter von 55 und älter.
+Anzahl der sozialversicherungspflichtig Beschäftigten im Alter von 55 und älter.
