--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -33,7 +33,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Grundsätzlich gilt: Wenn Straßenbaumaßnahmen bzw. -sanierungsmaßnahmen stattfinden und Haltestellen betroffen sind, werden diese automatisch barrierefrei umgebaut und der Kassler Sonderbord (ein besonderer abgeflachter Bordstein für einfacheren Aus- und Einstieg) mit taktilem Leitsystem ausgestattet.  Die Kosten übernimmt die INVG.<br>
+Grundsätzlich gilt: Wenn Straßenbau- bzw. -Sanierungsmaßnahmen stattfinden und Haltestellen betroffen sind, werden diese automatisch barrierefrei umgebaut und der Kassler Sonderbord (ein besonderer abgeflachter Bordstein für einfacheren Aus- und Einstieg) mit taktilem Leitsystem ausgestattet.  Die Kosten übernimmt die INVG.<br>
 <br>
 Der gelbe Vorlesetaster mit der „text-to-speech“-Funktion wird zusammen mit den DFI-Anzeigern an Haltestellen der INVG installiert. Mit Abschluss der 2. Baustufe konnten bisher 130 Haltestellen im Stadtgebiet realisiert werden.<br>
 <br>
