--- a/meta/11-9.md
+++ b/meta/11-9.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Anteil der Siedlungs- und Verkehrsfläche an der Gesamtfläche in in Prozent. Dies entspricht nährungsweise dem Anteil der versiegelten Fläche. <br>
+Der Anteil der Siedlungs- und Verkehrsfläche an der Gesamtfläche in Prozent. Dies entspricht nährungsweise dem Anteil der versiegelten Fläche. <br>
