--- a/meta/11-15.md
+++ b/meta/11-15.md
@@ -9,7 +9,7 @@ indicator_sort_order: 11-15-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: km2 je 1.000 EW 
+computation_units: km² je 1.000 EW 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
