--- a/meta/11-16.md
+++ b/meta/11-16.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Entfernung im Innerstäischen Bereich Luftlinie jeweils 300 Meter und in den Vorortern maximal 600 Meter Luftlinie. Entspricht den ÖPNV Richtlinien. <br>
+Entfernung im innerstädtischen Bereich Luftlinie jeweils 300 Meter und in den Vorortern maximal 600 Meter Luftlinie. Entspricht den ÖPNV Richtlinien. <br>
