--- a/meta/11-18.md
+++ b/meta/11-18.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die durchschnittliche Wohnfläche pro Person hat in den vergangenenen Jahren immer weiter zugenommen – von 34 m² im Jahr 1990 auf gut 45 m² im Jahr 2021. Allerdings ist dieser Wert in den letzten Jahren langsamer gestiegen. In kleineren Haushalten erhöht sich in der Regel die durchschnittliche Wohnfläche pro Person. Dieser Trend ergibt sich also u.a. aus der steigenden Zahl von Einpersonenhaushalten, aber z.B. auch dann, wenn erwachsene Kinder aus dem Haushalt der Eltern ausziehen. <br>
+Die durchschnittliche Wohnfläche pro Person hat in den vergangenenen Jahren immer weiter zugenommen – von 34 m² im Jahr 1990 auf gut 45 m² im Jahr 2021. Allerdings ist dieser Wert in den letzten Jahren langsamer gestiegen. In kleineren Haushalten erhöht sich in der Regel die durchschnittliche Wohnfläche pro Person. Dieser Trend ergibt sich u.a. aus der steigenden Zahl von Einpersonenhaushalten, aber z.B. auch dann, wenn erwachsene Kinder aus dem Haushalt der Eltern ausziehen. <br>
