--- a/meta/12-1.md
+++ b/meta/12-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 12-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Tonne je EW
+computation_units: Tonne je Einwohner/-in
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Abfallmenge der privaten Haushalte in Tonne je EW. <br>
+Abfallmenge der privaten Haushalte in Tonne je Einwohner/-in. <br>
