--- a/meta/12-6.md
+++ b/meta/12-6.md
@@ -9,7 +9,7 @@ indicator_sort_order: 12-06-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Liter je EW und Tag 
+computation_units: Liter je Einwohner/-in und Tag 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
