--- a/meta/12-6.md
+++ b/meta/12-6.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Veröffentlichung im Rahmen des Jahresabschlusses der Ingolstädter Kommunalbetriebe (IN-KB). 
+Veröffentlichung im Rahmen des Jahresabschlusses der Ingolstädter Kommunalbetriebe (INKB). 
