--- a/meta/16-2.md
+++ b/meta/16-2.md
@@ -9,7 +9,7 @@ indicator_sort_order: 16-02-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Bürger/-innenbeteiligungsverfahren pro 1.000 EW
+computation_units: Bürger/-innenbeteiligungsverfahren pro 1.000 Einwohner/-innen
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
