--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -1,25 +1,25 @@
 1-1-title: Anzahl Unterbringung von Obdachlosen
-1-2-title: Empfänger/innen von Grundsicherung im Alter
-1-3-title: Empfänger/innen von Grundsicherung nach SGB II insgesamt
+1-2-title: Empfänger/-innen von Grundsicherung im Alter
+1-3-title: Empfänger/-innen von Grundsicherung nach SGB II insgesamt
 1-4-1-title: Kinder unter 15 J. in Grundsicherung (SGB II)
 1-4-2-title: Kinder unter 15 J. in Grundsicherung (SGB II) in %
-1-5-title: Empfänger/innen von Grundsicherung nach SGB II insgesamt in % der Einwohner unter 65
-1-6-title: Empfänger/innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber und BaföG-Empfänger) in % der Gesamtbevölkerung
+1-5-title: Empfänger/-innen von Grundsicherung nach SGB II insgesamt in % der Einwohner/-innen unter 65
+1-6-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber/-innen und BaföG-Empfänger/-innen) in % der Gesamtbevölkerung
 
 2-1-title: Anteil geretteter Lebensmittel
 
 3-1-title: Anzahl Kurzzeit- und Langzeitpflegeplätze
 3-2-title: Anzahl und Art Präventionsangebote
-3-3-title: Ärzteversorgung (Allg.-Mediziner/-innen je 100.000 E)
+3-3-title: Ärzteversorgung (Allg.-Mediziner/-innen je 100.000 Einwohner/-innen)
 3-4-title: Fachärzte/-innen-Versorgung (Anzahl und Verteilung im Stadtgebiet)
 3-5-title: Immission von Luftschadstoffen (µg / m³)
 3-6-title: Offene Stellen und Ausbildungen von medizinischem Fachpersonal
 3-7-title: Vorzeitige Sterblickeit (unter 70 Jahre, Todesfälle)
-3-8-title: Wohnungsnahe Grundversorgung - Krankenhaus (Krankenhausbetten je 100.000 Einwohner:innen)
+3-8-title: Wohnungsnahe Grundversorgung - Krankenhaus (Krankenhausbetten je 100.000 Einwohner/-innen)
 
 4-1-title: Anzahl der Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU)
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
-4-3-title: Betreuung von Kindern in öff. KiTa (unter 3-Jährige / in %)
+4-3-title: Betreuung von Kindern in öff. Kita (unter 3-Jährige / in %)
 4-4-title: Integrative Kindertageseinrichtungen (in %)
 4-5-title: Kinder in öff. Tageseinrichtungen (unter 3-Jährige / absolut)
 4-6-title: Personal in öffentlich geförderter Kindertagespflege # auch in %
@@ -27,9 +27,9 @@
 4-8-title: Teilnehmerzahl Erwachsenenbildung
 4-9-title: Wohnungsnahe Grundversorgung - Grundschule (Einwohnergewichtete Luftliniendistanz zur nächsten Grundschule in Meter)
 
-5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische MA
-5-2-title: Empfänger/innen von Hilfe zum Lebensunterhalt
-5-3-title: Empfänger/innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber und BaföG-Empfänger)
+5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
+5-2-title: Empfänger/-innen von Hilfe zum Lebensunterhalt
+5-3-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber/-innen und BaföG-Empfänger/-innen)
 5-4-title: Frauenanteil im Stadtrat, Gemeinderat bzw. Kreistag (in %)
 5-5-title: sv-Beschäftigungsquote in % (15-65 J) # Frauen und Männer
 5-6-title: Verdienstabstand zwischen Frauen und Männern (Medianeinkommen-Abstand in Euro (Vollzeit))
