--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -32,4 +32,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Prozentualer Anteil der unter drei-jährigen Kiindern in öffentlichen Kindertagesstätten. Der Ausbau der Krippenplätze  schreitet voran und in den nächsten Jahren werden weitere Einrichtungen eröffnet. <br>
+Prozentualer Anteil der unter drei-jährigen Kindern in öffentlichen Kindertagesstätten. Der Ausbau der Krippenplätze  schreitet voran und in den nächsten Jahren werden weitere Einrichtungen eröffnet. <br>
