--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -25,7 +25,7 @@
 4-6-title: Personal in öffentlich geförderter Kindertagespflege
 4-7-title: Schulabbrecherquote* 
 4-8-title: Teilnehmerzahl Erwachsenenbildung
-4-9-title: Wohnungsnahe Grundversorgung - Grundschule (Einwohnergewichtete Luftliniendistanz zur nächsten Grundschule in Meter)
+4-9-title: Wohnungsnahe Grundversorgung - Grundschule
 
 5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
 5-2-title: Empfänger/-innen von Hilfe zum Lebensunterhalt
