--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -23,7 +23,7 @@
 4-4-title: Integrative Kindertageseinrichtungen
 4-5-title: Kinder in öff. Tageseinrichtungen
 4-6-title: Personal in öffentlich geförderter Kindertagespflege
-4-7-title: Schulabbrecherquote* 
+4-7-title: Schulabbrecherquote 
 4-8-title: Teilnehmerzahl Erwachsenenbildung
 4-9-title: Wohnungsnahe Grundversorgung - Grundschule
 
@@ -39,7 +39,7 @@
 6-3-title: Nitrat im Grundwasser
 6-4-title: Verhältnis von Trennsystemen zu Mischwasserkanälen
 
-7-1-title: Strom aus Windkraft*
+7-1-title: Strom aus Windkraft
 
 8-1-title: Aufstocker (Anteil der erwerbstätigen ALG-II Bezieher/-innen an allen erwerbsfähigen Leistungsbezieher/-innen)
 8-2-title: Beschäftigungsquote (15- bis 64-Jährige)
@@ -50,7 +50,7 @@
 
 9-1-title: Anzahl der angesiedelten Unternehmen in brigk und EGZ
 9-2-title: Breitbandversorgung - private Haushalte
-9-3-title: Existenzgründungen*
+9-3-title: Existenzgründungen
 9-4-title: sv-Beschäftigte mit Hochschulabschluss (Arbeitsort, im Juni)
 
 10-1-title: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren
@@ -58,7 +58,7 @@
 10-3-title: Beschäftigungsquote - Ausländer
 10-4-title: Schulabbrecherquote - Ausländer
 10-5-title: Sprachkenntnisse bei Einschulung (Sprachniveau)
-10-6-title: Einbürgerungen im Jahr*
+10-6-title: Einbürgerungen im Jahr
 10-7-title: Wohnfläche (m² je Einwohner/-in) in den 12 Stadtbezirken, Gini-Koeffizient
 
 11-1-title: Anteil (lokal) emissionsfreier Fahrzeuge bei Zulassung
