--- a/meta/1-1.md
+++ b/meta/1-1.md
@@ -33,4 +33,4 @@ reporting_status: complete
 ---
 Der Indikator beschreibt mehrere Formen der Unterbringung. Dazu gehören die Nutzung von Appartements rund um die Uhr, d.h. feste Einquartierung; separate Unterkünfte für Familien mit Minderjährigen; soziale Betreuung durch Kommune; Förderung von Trägern z.B. Straßenambulanz St. Franziskus, SkF (Sozialdienst katholischer Frauen) Notwohnungen (Fallzahlen jeweils nach Stichtag 31. Dezember). <br>
 <br>
-Zielbezug zur Nachhaltigkeitsagenda Ingolstadt: V1.2: Unterstützung von Menschen in besonderen Lebenslagen (Handlungsfeld "Vielfalt und Engagement")
+<b>Zielbezug zur Nachhaltigkeitsagenda Ingolstadt: V1.2: Unterstützung von Menschen in besonderen Lebenslagen (Handlungsfeld "Vielfalt und Engagement")</b>
