--- a/meta/1-2.md
+++ b/meta/1-2.md
@@ -32,3 +32,5 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Empfänger/-innen von Grundsicherung im Alter. Vor dem Jahr 1947 geborene Personen erreichten die Altersgrenze mit 65 Jahren; für 1947 und später Geborene wird die Altersgrenze seit dem Jahr 2012 schrittweise auf 67 Jahre angehoben. <br>
+<br>
+<b>Ziel der Nachhaltigkeitsagenda Ingolstadt: V1.10: Armutsbekämpfung (Handlungsfeld "Vielfalt und Engagement")</b>
