--- a/meta/1-3.md
+++ b/meta/1-3.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Anzahl aller Empfänger/-innen von Grundsicherung nach SGB II. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+V1.10: Armutsbekämpfung
