--- a/meta/1-4-1.md
+++ b/meta/1-4-1.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Die Anzahl von Kindern unter 15 Jahren, die Grundsicherungsleistungen nach dem SGB II in Anspruch nehmen. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+V1.10: Armutsbekämpfung
