--- a/meta/1-6.md
+++ b/meta/1-6.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber und BaföG-Empfänger) in % der Gesamtbevölkerung. Die Transferleistungen der sozialen Mindestsicherungssysteme sind finanzielle Hilfen des Staates, die zur Sicherung des grundlegenden Lebensunterhalts dienen. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+V1.10: Armutsbekämpfung
