--- a/meta/2-1.md
+++ b/meta/2-1.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Wert setzt sich zusammen aus der Menge an Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist und der Menge an geretteten Lebensmitteln. Die Menge der geretteten Lebensmittel wird von Foodsharing und der Tafel übermittelt. Dabei ist zu beachten, dass diese Daten kein exaktes Bild wiederspiegeln, sondern nur als eine Annäherung zu verstehen sind.
+Der Wert setzt sich zusammen aus der Menge an Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist und der Menge an geretteten Lebensmitteln. Die Menge der geretteten Lebensmittel wird von Foodsharing und der Tafel übermittelt. Dabei ist zu beachten, dass diese Daten kein exaktes Bild wiederspiegeln, sondern nur als eine Annäherung zu verstehen sind.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+N1.2: Lebensmittelverschwendung vermeiden
