--- a/meta/3-1.md
+++ b/meta/3-1.md
@@ -32,4 +32,7 @@ reporting_status: complete
 ---
 Kurzzeitpflege ist dabei auf einen Zeitraum von bis zu acht Wochen im Jahr begrenzt. Im Gegensatz dazu ist mit Langzeitpflege eine dauerhafte Pflege ohne zeitliche Begrenzung gemeint. <br>
 <br>
-Die Zahl der Langzeitpflegeplätze setzt sich aus den vollstationären und den Hospizplätzen zusammen. Kurzzeitpflegeplätze werden vom Ingolstädter Gesundheitsamt derzeit nicht erhoben.
+Die Zahl der Langzeitpflegeplätze setzt sich aus den vollstationären und den Hospizplätzen zusammen. Kurzzeitpflegeplätze werden vom Ingolstädter Gesundheitsamt derzeit nicht erhoben.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+N2.5: Ermöglichung eines guten Lebens im Alter
