--- a/meta/1-5.md
+++ b/meta/1-5.md
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Empfänger/-innen von Grundsicherung nach SGB II insgesamt in % der Einwohner unter 65.
+Empfänger/-innen von Grundsicherung nach SGB II insgesamt in % der Einwohner unter 65.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.10: Armutsbekämpfung
